--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,12 @@
 
   <head>
     <title>{{ .title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+
+    <!--Use bootstrap 3.3.6 to make the application look nice-->
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
+    <script async src="/static/bootstrap.min.js"></script>
   </head>
 
   <body class="container">
