Plumb in a date picker

--- a/templates/header.html
+++ b/templates/header.html
@@ -7,9 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
 
+    <!-- jquery/1.12.4 -->
+    <script src="static/jquery.min.js"></script>
+    <!-- jquery-ui/1.12.1 -->
+    <link rel="stylesheet" href="static/jquery-ui.css">
+    <script src="static/jquery-ui.min.js"></script>
     <!--Use bootstrap 3.3.6 to make the application look nice-->
     <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <script async src="/static/bootstrap.min.js"></script>
+    <script src="/static/bootstrap.min.js"></script>
   </head>
 
   <body class="container">
